--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: HDPenReg
 Version: 0.94.7
-Date: 2020-02-19
+Date: 2020-10-03
 Encoding: UTF-8
 Title: High-Dimensional Penalized Regression
-Authors@R: c(person("Quentin", "Grimonprez", role = c("aut","cre"), email =
-    "quentin.grimonprez@inria.fr"), person("Serge", "Iovleff", role = "aut"))
+Authors@R: c(person("Quentin", "Grimonprez", role = c("aut","cre"), email = "quentingrim@yahoo.fr"), 
+             person("Serge", "Iovleff", role = "aut"))
 Copyright: Inria - Université de Lille
 BugReports: https://github.com/modal-inria/HDPenReg/issues
 Depends: R (>= 3.0.2), rtkore (>= 1.5.5)
@@ -15,4 +15,4 @@ Description: Algorithms for lasso and fused-lasso problems: implementation of
 License: GPL (>= 2)
 LinkingTo: rtkore, Rcpp
 SystemRequirements: GNU make
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
